; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemdisp/extr_locator.c_SWbemPropertySet_create.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemdisp/extr_locator.c_SWbemPropertySet_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.propertyset = type { i32, %struct.TYPE_3__, i32* }

@.str = private unnamed_addr constant [8 x i8] c"%p, %p\0A\00", align 1
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@propertyset_vtbl = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"returning iface %p\0A\00", align 1
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__**)* @SWbemPropertySet_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SWbemPropertySet_create(i32* %0, %struct.TYPE_3__** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__**, align 8
  %6 = alloca %struct.propertyset*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__** %1, %struct.TYPE_3__*** %5, align 8
  %7 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), %struct.TYPE_3__** %7, i32* %8)
  %10 = call %struct.propertyset* @heap_alloc(i32 24)
  store %struct.propertyset* %10, %struct.propertyset** %6, align 8
  %11 = icmp ne %struct.propertyset* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %13, i32* %3, align 4
  br label %34

14:                                               ; preds = %2
  %15 = load %struct.propertyset*, %struct.propertyset** %6, align 8
  %16 = getelementptr inbounds %struct.propertyset, %struct.propertyset* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store i32* @propertyset_vtbl, i32** %17, align 8
  %18 = load %struct.propertyset*, %struct.propertyset** %6, align 8
  %19 = getelementptr inbounds %struct.propertyset, %struct.propertyset* %18, i32 0, i32 0
  store i32 1, i32* %19, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = load %struct.propertyset*, %struct.propertyset** %6, align 8
  %22 = getelementptr inbounds %struct.propertyset, %struct.propertyset* %21, i32 0, i32 2
  store i32* %20, i32** %22, align 8
  %23 = load %struct.propertyset*, %struct.propertyset** %6, align 8
  %24 = getelementptr inbounds %struct.propertyset, %struct.propertyset* %23, i32 0, i32 2
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @IWbemClassObject_AddRef(i32* %25)
  %27 = load %struct.propertyset*, %struct.propertyset** %6, align 8
  %28 = getelementptr inbounds %struct.propertyset, %struct.propertyset* %27, i32 0, i32 1
  %29 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %5, align 8
  store %struct.TYPE_3__* %28, %struct.TYPE_3__** %29, align 8
  %30 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %5, align 8
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %30, align 8
  %32 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), %struct.TYPE_3__* %31)
  %33 = load i32, i32* @S_OK, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %14, %12
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @TRACE(i8*, ...) #1

declare dso_local %struct.propertyset* @heap_alloc(i32) #1

declare dso_local i32 @IWbemClassObject_AddRef(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
